Fix missing repo_groups section in Foreman to prevent scanner error

--- a/puppet/modules/slave/templates/test_pull_requests_foreman.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman.json.erb
@@ -8,7 +8,9 @@
   "bot_github_user": "<%= github_user -%>",
   "irc_channel": "#theforeman-dev",
   "not_mergable_cache": "~/pr_tests/cache/test_pull_request_foreman_not_mergable",
-  "repo_groups": {},
+  "repo_groups": {
+    "foreman": "foreman"
+  },
   "settings": {
     "test_settings": {
       "name": "test",
