--- a/puppet/modules/slave/templates/test_pull_requests_hammer_cli_foreman_discovery.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_hammer_cli_foreman_discovery.json.erb
@@ -14,7 +14,7 @@
       "name": "test",
       "test_prefix": "Test Results:",
       "allow_multiple": true,
-      "run_without_trigger": true,
+      "run_without_trigger": false,
       "branches": { "master": {"jenkins_job_name": "test_hammer_cli_foreman_discovery_pull_request",
                                 "downstream_job_name": "test_hammer_cli_foreman_discovery",
                                 "build_token": "<%= jenkins_build_token -%>"
