--- a/puppet/modules/slave/templates/test_pull_requests_katello_packaging.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_katello_packaging.json.erb
@@ -16,7 +16,7 @@
             "name": "test",
             "test_prefix": "Test Results:",
             "allow_multiple": true,
-            "run_without_trigger": true,
+            "run_without_trigger": false,
             "branches": {
                 "master": {
                     "jenkins_job_name": "packaging_test_pull_request_katello_rpm",
