--- a/puppet/modules/slave/templates/test_pull_requests_foreman.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman.json.erb
@@ -16,7 +16,7 @@
       "name": "test",
       "test_prefix": "Test Results:",
       "allow_multiple": true,
-      "run_without_trigger": true,
+      "run_without_trigger": false,
       "branches": {
         "develop": {
           "jenkins_job_name": "test_develop_pull_request",
