--- a/puppet/modules/slave/templates/test_pull_requests_foreman_tasks.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman_tasks.json.erb
@@ -16,7 +16,7 @@
             "name": "test",
             "test_prefix": "Test Results:",
             "allow_multiple": true,
-            "run_without_trigger": false,
+            "run_without_trigger": true,
             "branches": {
                 "*": {
                     "jenkins_job_name": "test_plugin_pull_request",
