--- a/puppet/modules/slave/templates/test_pull_requests_foreman.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman.json.erb
@@ -23,6 +23,21 @@
           "downstream_job_name": "test_develop",
           "build_token": "<%= jenkins_build_token -%>"
         },
+        "rails42": {
+          "jenkins_job_name": "test_develop_pull_request",
+          "downstream_job_name": "test_develop",
+          "build_token": "<%= jenkins_build_token -%>"
+        },
+        "1.11-stable": {
+          "jenkins_job_name": "test_develop_pull_request",
+          "downstream_job_name": "test_1_11_stable",
+          "build_token": "<%= jenkins_build_token -%>",
+          "addtl_jenkins_params": {
+            "foreman": {
+              "katello_branch": "KATELLO-3.0"
+            }
+          }
+        },
         "1.10-stable": {
           "jenkins_job_name": "test_develop_pull_request",
           "downstream_job_name": "true",
