Revert "Decouple Foreman PR tests from test_develop status temporarily"
test_develop has stabilised again.

This reverts commit da45a3fd9652f387dc6a110afbf5f35f07e2d126.

--- a/puppet/modules/slave/templates/test_pull_requests_foreman.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_foreman.json.erb
@@ -20,17 +20,17 @@
       "branches": {
         "develop": {
           "jenkins_job_name": "test_develop_pull_request",
-          "downstream_job_name": "true",
+          "downstream_job_name": "test_develop",
           "build_token": "<%= jenkins_build_token -%>"
         },
         "rails42": {
           "jenkins_job_name": "test_develop_pull_request",
-          "downstream_job_name": "true",
+          "downstream_job_name": "test_develop",
           "build_token": "<%= jenkins_build_token -%>"
         },
         "1.11-stable": {
           "jenkins_job_name": "test_develop_pull_request",
-          "downstream_job_name": "true",
+          "downstream_job_name": "test_1_11_stable",
           "build_token": "<%= jenkins_build_token -%>",
           "addtl_jenkins_params": {
             "foreman": {
