Add 2016 archive key, use unambiguous key IDs

--- a/puppet/modules/freight/templates/freight.conf.erb
+++ b/puppet/modules/freight/templates/freight.conf.erb
@@ -12,7 +12,7 @@ LABEL="TheForeman"
 # GPG key to use to sign repositories.  This is required by the `apt`
 # repository provider.  Use `gpg --gen-key` (see `gpg`(1) for more
 # details) to generate a key and put its email address here.
-GPG="packages@theforeman.org"
+GPG="1AA043B8 563278F6"
 
 # Follow symlinks in VARLIB
 SYMLINKS="on"
