Disable recursive checkout to avoid augeas/gnulib

--- a/puppet/modules/deploy/templates/script.erb
+++ b/puppet/modules/deploy/templates/script.erb
@@ -3,7 +3,8 @@ set -e # dont rsync if clone fails
 echo "Deploy started at `date`"
 dir=`mktemp -d`
 trap "rm -rf $dir" EXIT
-git clone --recursive https://github.com/theforeman/foreman-infra $dir/
+git clone https://github.com/theforeman/foreman-infra $dir/
+(cd $dir && git submodule update --init)
 rsync -aqx --delete-after --exclude=.git $dir/puppet/modules/ /etc/puppet/environments/production/modules/
 echo "Deploy complete at `date`"
 # ERB highlighting looks terrible in this script...
