Permit ACME challenges to debugs/.well-known

--- a/puppet/modules/web/templates/debugs.conf.erb
+++ b/puppet/modules/web/templates/debugs.conf.erb
@@ -4,3 +4,10 @@
   AuthUserFile /var/www/vhosts/debugs/htpasswd
   Require valid-user
 </Location>
+
+# For ACME/Let's Encrypt challenges
+<Location /.well-known>
+  Satisfy Any
+  Order Allow,Deny
+  Allow from all
+</Location>
