--- a/puppet/modules/web/templates/web.conf.erb
+++ b/puppet/modules/web/templates/web.conf.erb
@@ -4,5 +4,8 @@ RewriteRule   ^/issues(.*)  http://projects.theforeman.org/issues$1  [R,L]
 RewriteRule   ^/versions(.*)  http://projects.theforeman.org/versions$1  [R,L]
 RewriteRule   ^/wiki(.*)  http://projects.theforeman.org/wiki$1  [R,L]
 
+RewriteCond   %{HTTPS} !=on
+RewriteRule   ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
+
 RewriteRule   ^/manuals/latest(.*) /manuals/<%= @stable -%>$1 [R,L]
 RewriteRule   ^/manuals/<%= @next %>(.*) /manuals/<%= @latest -%>$1 [R,L]
