--- a/puppet/modules/web/templates/web.conf.erb
+++ b/puppet/modules/web/templates/web.conf.erb
@@ -4,8 +4,10 @@ RewriteRule   ^/issues(.*)  http://projects.theforeman.org/issues$1  [R,L]
 RewriteRule   ^/versions(.*)  http://projects.theforeman.org/versions$1  [R,L]
 RewriteRule   ^/wiki(.*)  http://projects.theforeman.org/wiki$1  [R,L]
 
+<% if @https -%>
 RewriteCond   %{HTTPS} !=on
-RewriteRule   ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
+RewriteRule   ^/?(.*) https://%{SERVER_NAME}/$1 [R=301,L]
+<% end -%>
 
 RewriteRule   ^/manuals/latest(.*) /manuals/<%= @stable -%>$1 [R,L]
 RewriteRule   ^/manuals/<%= @next %>(.*) /manuals/<%= @latest -%>$1 [R,L]
