Change min_ruby193 to ruby200 and enable for 1.14+

--- a/puppet/modules/slave/templates/test_pull_requests_smart_proxy_dynflow.json.erb
+++ b/puppet/modules/slave/templates/test_pull_requests_smart_proxy_dynflow.json.erb
@@ -25,8 +25,7 @@
                     "addtl_jenkins_params": {
                         "smart_proxy_dynflow": {
                             "plugin_repo": "https://github.com/theforeman/smart_proxy_dynflow.git",
-                            "plugin_name": "smart_proxy_dynflow",
-                            "min_ruby193": "true"
+                            "plugin_name": "smart_proxy_dynflow"
                         }
                     }
                 }
