--- a/puppet/modules/debian/templates/pbuilder_f70.erb
+++ b/puppet/modules/debian/templates/pbuilder_f70.erb
@@ -8,6 +8,9 @@
 #cd /var/cache/pbuilder/result/
 #/usr/bin/dpkg-scanpackages . /dev/null >> /var/cache/pbuilder/result/Packages
 
+# Since Debian/stretch, gnupg is not an apt dependency anymore, leading apt-key add to fail
+apt-get -y install gnupg
+
 <% if @backports == true then -%>
 # Backports
 echo "deb http://backports.debian.org/debian-backports/ <%= @release %>-backports main" >> /etc/apt/sources.list
