fix some future parser deprecations

--- a/puppet/modules/slave/templates/hub_config.erb
+++ b/puppet/modules/slave/templates/hub_config.erb
@@ -1,4 +1,4 @@
 ---
 github.com:
-- user: <%= github_user %>
-  oauth_token: <%= github_oauth %>
+- user: <%= @github_user %>
+  oauth_token: <%= @github_oauth %>
