--- a/puppet/modules/exim/templates/exim.conf.erb
+++ b/puppet/modules/exim/templates/exim.conf.erb
@@ -2,79 +2,79 @@
 
 #
 # This file is managed by puppet. Any changes made will be replaced.
-# 
+#
 
 ######################################################################
 #                    MAIN CONFIGURATION SETTINGS                     #
 ######################################################################
 
-primary_hostname = <%= primary_hostname %>
+primary_hostname = <%= @primary_hostname %>
 
 local_interfaces = <; 127.0.0.1
 
-domainlist local_domains = <%= domainlist_local_domains %>
-domainlist relay_to_domains = <%= domainlist_relay_to_domains %>
-hostlist   relay_from_hosts = <%= hostlist_relay_from_hosts %>
+domainlist local_domains = <%= @domainlist_local_domains %>
+domainlist relay_to_domains = <%= @domainlist_relay_to_domains %>
+hostlist   relay_from_hosts = <%= @hostlist_relay_from_hosts %>
 
 acl_smtp_mail = acl_check_mail
 acl_smtp_rcpt = acl_check_rcpt
 acl_smtp_data = acl_check_data
 acl_smtp_mime = acl_check_mime
 
-<% if virus_scan %>
-av_scanner = <%= av_scanner %>
+<% if @virus_scan %>
+av_scanner = <%= @av_scanner %>
 <% end %>
 
-<% if spam_scan %>
-spamd_address=<%= spamd_address %>
+<% if @spam_scan %>
+spamd_address=<%= @spamd_address %>
 <% end %>
 
-#tls_advertise_hosts = <%= tls_advertise_hosts %>
-#tls_certificate = <%= tls_certificate %>
-#tls_privatekey = <%= tls_privatekey %>
+#tls_advertise_hosts = <%= @tls_advertise_hosts %>
+#tls_certificate = <%= @tls_certificate %>
+#tls_privatekey = <%= @tls_privatekey %>
 
-daemon_smtp_ports = <%= daemon_smtp_ports %>
-#tls_on_connect_ports = <%= tls_on_connect_ports %>
+daemon_smtp_ports = <%= @daemon_smtp_ports %>
+#tls_on_connect_ports = <%= @tls_on_connect_ports %>
 
-<% if qualify_domain != "" %>
-qualify_domain = <%= qualify_domain %>
+<% if @qualify_domain != "" %>
+qualify_domain = <%= @qualify_domain %>
 <% end %>
 
-<% if qualify_recipient != "" %>
-qualify_recipient = <%= qualify_recipient %>
+<% if @qualify_recipient != "" %>
+qualify_recipient = <%= @qualify_recipient %>
 <% end %>
 
-<% if allow_domain_literals %>
+<% if @allow_domain_literals %>
 allow_domain_literals
 <% end %>
 
-never_users = <%= never_users %>
+never_users = <%= @never_users %>
 
-<% if do_host_lookups %>
-host_lookup = <%= host_lookup %>
+<% if @do_host_lookups %>
+host_lookup = <%= @host_lookup %>
 <% end %>
 
-auth_advertise_hosts = <%= auth_advertise_hosts %>
+auth_advertise_hosts = <%= @auth_advertise_hosts %>
 
-rfc1413_hosts = <%= rfc1413_hosts %>
-rfc1413_query_timeout = <%= rfc1413_query_timeout %>
+rfc1413_hosts = <%= @rfc1413_hosts %>
+rfc1413_query_timeout = <%= @rfc1413_query_timeout %>
 
-<% if allow_unqualified_sender %>
-sender_unqualified_hosts = 
+<% if @allow_unqualified_sender %>
+sender_unqualified_hosts =
 <% end %>
 
-<% if allow_unqualified_recipient %>
-recipient_unqualified_hosts = 
+<% if @allow_unqualified_recipient %>
+recipient_unqualified_hosts =
 <% end %>
 
-<% if allow_percent_hack %>
-percent_hack_domains = <%= percent_hack_domains %>
+<% if @allow_percent_hack %>
+percent_hack_domains = <%= @percent_hack_domains %>
 <% end %>
 
-ignore_bounce_errors_after = <%= ignore_bounce_errors_after %>
-timeout_frozen_after = <%= timeout_frozen_after %>
+ignore_bounce_errors_after = <%= @ignore_bounce_errors_after %>
+timeout_frozen_after = <%= @timeout_frozen_after %>
 
-<% if split_spool_directory %>
+<% if @split_spool_directory %>
 split_spool_directory = true
 <% end %>
 
@@ -100,10 +100,10 @@ acl_check_mail:
 
   # Use the lack of reverse DNS to trigger greylisting. Some people
   # even reject for it but that would be a little excessive.
-  
+
   warn condition = ${if eq{$sender_host_name}{} {1}}
        set acl_m_greylistreasons = Host $sender_host_address lacks reverse DNS\n$acl_m_greylistreasons
-  
+
   accept
 
 
@@ -284,7 +284,7 @@ acl_check_data:
   #         message    = RFC2822 says that all mail SHOULD have a Message-ID header.\n\
   #                      Most messages without it are spam, so your mail has been rejected.
   #
-  # Alternatively if we're feeling more lenient we could just use it to 
+  # Alternatively if we're feeling more lenient we could just use it to
   # trigger greylisting instead:
 
   warn    condition  = ${if !def:h_Message-ID: {1}}
@@ -311,7 +311,7 @@ acl_check_data:
   # accept  condition  = ${if !def:spam_score_int {1}}
   #         add_header = X-Spam-Note: SpamAssassin invocation failed
   #
-  
+
   # Unconditionally add score and report headers
   #
   # warn    add_header = X-Spam-Score: $spam_score ($spam_bar)\n\
@@ -345,7 +345,7 @@ acl_check_data:
 
   accept
 
-# To enable the greylisting, also uncomment this line: 
+# To enable the greylisting, also uncomment this line:
 # .include /etc/exim/exim-greylist.conf.inc
 
 acl_check_mime:
@@ -379,25 +379,25 @@ begin routers
 # allow_domain_literals above, so that Exim can recognize the syntax of
 # domain literal addresses.
 
-<% if allow_domain_literals %>
+<% if @allow_domain_literals %>
 domain_literal:
    driver = ipliteral
    domains = ! +local_domains
    transport = remote_smtp
 <% end %>
 
-<% if use_gateway %>
+<% if @use_gateway %>
 send_to_gateway:
-    driver = <%= gateway_driver %>
-    transport = <%= gateway_transport %>
-    route_list = <%= gateway_route_list %>
+    driver = <%= @gateway_driver %>
+    transport = <%= @gateway_transport %>
+    route_list = <%= @gateway_route_list %>
     no_more
-<% else if use_smarthost %>
+<% else if @use_smarthost %>
 smarthost:
-    driver = <%= smarthost_driver %>
-    domains = <%= smarthost_domains %>
-    transport = <%= smarthost_transport %>
-    route_data = <%= smarthost_route_data %>
+    driver = <%= @smarthost_driver %>
+    domains = <%= @smarthost_domains %>
+    transport = <%= @smarthost_transport %>
+    route_data = <%= @smarthost_route_data %>
     no_more
 <% else %>
 dnslookup:
@@ -519,10 +519,10 @@ begin transports
 
 
 # This transport is used for delivering messages over SMTP connections.
-<% if use_gateway %>
+<% if @use_gateway %>
 remote_smtp:
     driver = smtp
-    hosts_try_auth=<%= gateway_auth_hosts_try_auth %>
+    hosts_try_auth=<%= @gateway_auth_hosts_try_auth %>
 <% else %>
 remote_smtp:
     driver = smtp
@@ -595,7 +595,7 @@ address_reply:
   driver = autoreply
 
 
-# This transport is used to deliver local mail to cyrus IMAP server via UNIX 
+# This transport is used to deliver local mail to cyrus IMAP server via UNIX
 # socket. You'll need to configure the 'localuser' router above to use it.
 #
 #lmtp_delivery:
@@ -647,17 +647,17 @@ begin rewrite
 
 begin authenticators
 
-<% if use_gateway %>
+<% if @use_gateway %>
 cram_md5:
     driver = cram_md5
     public_name = CRAM-MD5
-    client_name = <%= gateway_auth_username %>
-    client_secret = <%= gateway_auth_secret %>
+    client_name = <%= @gateway_auth_username %>
+    client_secret = <%= @gateway_auth_secret %>
 
 plain:
     driver = plaintext
     public_name = PLAIN
-    client_send = ^<%= gateway_auth_username %>^<%= gateway_auth_secret %>
+    client_send = ^<%= @gateway_auth_username %>^<%= @gateway_auth_secret %>
 <% end %>
 
 # This authenticator supports CRAM-MD5 username/password authentication
@@ -688,7 +688,7 @@ plain:
 # The default RCPT ACL checks for successful authentication, and will accept
 # messages from authenticated users from anywhere on the Internet.
 
-# 
+#
 
 # PLAIN authentication has no server prompts. The client sends its
 # credentials in one lump, containing an authorization ID (which we do not
